--- a/public/test/4/about-virginia-woolf/index.html
+++ b/public/test/4/about-virginia-woolf/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>Authorship discovery test 3</title>
+  <title>Authorship discovery test 4</title>
   <link href="/assets/semantic.min.css" rel="stylesheet">
   <link href="/assets/style.css" rel="stylesheet">
   <link href="/assets/test.css" rel="stylesheet">
+
+  <link href="/test/4/about-virginia-woolf" rel="me">
 </head>
 <body>
 
