add test 5: h-entry to h-card with u-url and u-uid

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,11 @@
         -
         Entry with rel=author to an h-card with rel=me
       </li>
+      <li>
+        <a href="/test/5">Discovery Test #5</a>
+        -
+        Entry with rel=author to an h-card with u-url and u-uid
+      </li>
     </ul>
 
     <p>
@@ -93,6 +98,11 @@
     "name": "Virginia Woolf",
     "url": "https://authorship.rocks/test/4/about-virginia-woolf",
     "photo": "https://authorship.rocks/images/virginia-woolf.jpg"
+  },
+  "https://authorship.rocks/test/5": {
+    "name": "Basho",
+    "url": "https://authorship.rocks/test/5/about-basho",
+    "photo": "https://authorship.rocks/images/basho.jpg"
   }
 }</textarea>
   </section>
