authorship-spec on its own URL

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
   <section class="content">
     <h3>About this site</h3>
-    <p><b><i>Authorship Rocks!</i></b> is a validator to help you test your <a href="https://indieweb.org/authorship">Authorship Discovery</a> implementation.</p>
+    <p><b><i>Authorship Rocks!</i></b> is a validator to help you test your <a href="https://indieweb.org/authorship-spec">Authorship Discovery</a> implementation.</p>
   </section>
 
   <section class="content small">
